# foxes.systems

./: .gitignore  .gitmodules  CNAME  Cargo.toml  LICENSE  Pipfile  README.md  deploy.sh  index.html  package-lock.json  package.json  pgp.key  style.css  webpack.config.js
blog/: __init__.py  __main__.py  post.py  renderer.py
blog/src/: styles.scss
blog/static/: pgp.key
blog/templates/: archive.html  base.html  content.html  index.html  nav.html
content/: about.md
content/posts/: 1.md  2.md  3.md  gentoo_microbit.md  highjacking_pop.md
docs/: CNAME  index.html
docs/archive/: index.html
docs/post/gentoo_microbit/: index.html
docs/post/highjacking_pop/: index.html
posts/: .microbit_repl_on_gentoo.html.swp  README.txt  building_jails.html  coloring_beatsaber.html  designing_for_readability.html  hijacking_pop_os.html  jailing_btrfs.html  microbit_repl_on_gentoo.html  rpi_in_laptop.html  template.html  thinkpad_x225.html
public/: index.html
public/about/: index.html
public/archive/: index.html
public/post/gentoo_microbit/: index.html
public/post/highjacking_pop/: index.html
public/post/traefik/: index.html
public/post/traefik2/: index.html
src/: lib.rs
