[package]
name = "post"
version = "0.1.0"
authors = ["Hayden Hughes <hayden@vulpes.chickenkiller.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blog"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]
